adding undo/redo strings

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">Gizlənmiş mediyanı göstərmə</string>
     <string name="maximum_share_reached">Bu qədər faylı bir dəfəyə paylaşa bilməzsiniz</string>
     <string name="empty_and_disable_recycle_bin">Zibil qutusunu boşalt və qapat</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sırala</string>
