--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -202,6 +202,8 @@
     <string name="stop_showing_hidden">Deixar de mostrar mitjans amagats</string>
     <string name="maximum_share_reached">No pots compartir aquest contingut alhora</string>
     <string name="empty_and_disable_recycle_bin">Buida i desactiva la paperera de reciclatge</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
