--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">Stop showing hidden media</string>
     <string name="maximum_share_reached">You cannot share this much content at once</string>
     <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Seřadit dle</string>
