--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">Arrêter d\'afficher les medias masqués</string>
     <string name="maximum_share_reached">Vous ne pouvez pas partager autant de contenu à la fois</string>
     <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Trier par</string>
