--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">Non mostrare media nascosti</string>
     <string name="maximum_share_reached">Non puoi condividere così tanto in una volta sola</string>
     <string name="empty_and_disable_recycle_bin">Svuota e disattiva il cestino</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordina per</string>
