--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">Stopp å vise skjulte media</string>
     <string name="maximum_share_reached">Du kan ikke dele så mye innhold på en gang</string>
     <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sorter etter</string>
