--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -205,6 +205,8 @@
     <string name="stop_showing_hidden">Przestań pokazywać ukryte multimedia</string>
     <string name="maximum_share_reached">Nie możesz udostępniać tak wielu danych naraz</string>
     <string name="empty_and_disable_recycle_bin">Wyczyść i wyłącz kosz</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sortuj według parametru:</string>
