--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -206,6 +206,8 @@
     <string name="stop_showing_hidden">Не показывать скрытые медиа</string>
     <string name="maximum_share_reached">Слишком большой объём данных, чтобы делиться им</string>
     <string name="empty_and_disable_recycle_bin">Очистить и отключить корзину</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Сортировать по…</string>
