--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -206,6 +206,8 @@
     <string name="stop_showing_hidden">Ukončiť zobrazovanie skrytých médií</string>
     <string name="maximum_share_reached">Nemôžete zdieľať toľko obsahu naraz</string>
     <string name="empty_and_disable_recycle_bin">Vysypať a deaktivovať odpadkový kôš</string>
+    <string name="undo">Späť</string>
+    <string name="redo">Obnoviť</string>
 
     <!-- Sorting -->
     <string name="sort_by">Na zoradenie použiť</string>
