--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">不显示隐藏的媒体文件</string>
     <string name="maximum_share_reached">您不能一次分享太多的内容</string>
     <string name="empty_and_disable_recycle_bin">清空并禁用回收站</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序方式</string>
