--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -202,6 +202,8 @@
     <string name="stop_showing_hidden">停止顯示隱藏的檔案</string>
     <string name="maximum_share_reached">你不能一次分享這麼多內容</string>
     <string name="empty_and_disable_recycle_bin">清空並停用回收桶</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">排序</string>
