--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">Lopeta piilotettujen näyttäminen</string>
     <string name="maximum_share_reached">Et voi jakaa näin paljoa kerralla</string>
     <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Järjestä</string>
