--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">非表示項目を表示しない</string>
     <string name="maximum_share_reached">You cannot share this much content at once</string>
     <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">並べ替え</string>
