--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">Neberodyti paslėptų bylų</string>
     <string name="maximum_share_reached">Negalite bendrinti tiek daug turinio vienu metu</string>
     <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Rūšiuoti pagal</string>
