--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -203,6 +203,8 @@
     <string name="stop_showing_hidden">Gizli medyayı göstermeyi bırak</string>
     <string name="maximum_share_reached">Bu kadar çok içeriği bir kerede paylaşamazsınız</string>
     <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="undo">Undo</string>
+    <string name="redo">Redo</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sıralama ölçütü</string>
