--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -131,8 +131,8 @@
     <string name="root">Arrel /</string>
     <string name="wrong_root_selected">Has seleccionat la carpeta incorrecta. Selecciona la carpeta arrel de la targeta SD</string>
     <string name="sd_card_otg_same">La targeta SD i el dispositiu OTG no poden ser el mateix</string>
-    <string name="app_on_sd_card">You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won\'t even see them on the list of available widgets.
-        It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage.</string>
+    <string name="app_on_sd_card">Sembla que l\'aplicació està instal·lada a una targeta SD, cosa que fa que els widgets de l\'aplicació no estiguin disponibles. No els veuràs ni a la llista de widgets disponibles.
+        És una limitació del sistema, de manera que si voleu utilitzar els widgets, heu de tornar a moure l\'aplicació a l\'emmagatzematge intern.</string>
 
     <!-- File properties -->
     <string name="properties">Propietats</string>
@@ -202,8 +202,8 @@
     <string name="stop_showing_hidden">Deixar de mostrar mitjans amagats</string>
     <string name="maximum_share_reached">No pots compartir aquest contingut alhora</string>
     <string name="empty_and_disable_recycle_bin">Buida i desactiva la paperera de reciclatge</string>
-    <string name="undo">Undo</string>
-    <string name="redo">Redo</string>
+    <string name="undo">Desfer</string>
+    <string name="redo">Refer</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar per</string>
