adding a new None string

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Détails</string>
     <string name="notes">Notes</string>
     <string name="deleting_folder">Supprimer le dossier \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoris</string>
