--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Detalles</string>
     <string name="notes">Notas</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorites</string>
