--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Details</string>
     <string name="notes">Notes</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorit</string>
