--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">詳細</string>
     <string name="notes">メモ</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">お気に入り</string>
