--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Szczegóły</string>
     <string name="notes">Notatnik</string>
     <string name="deleting_folder">Usuwam folder \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Ulubione</string>
