--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Подробности</string>
     <string name="notes">Заметки</string>
     <string name="deleting_folder">Удаление папки \"%s\"</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Избранное</string>
