--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Ayrıntılar</string>
     <string name="notes">Notlar</string>
     <string name="deleting_folder">\'%s\' klasörü siliniyor</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriler</string>
