--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">詳細資訊</string>
     <string name="notes">筆記</string>
     <string name="deleting_folder">資料夾 \'%s\' 刪除中</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">我的最愛</string>
