--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Detallar</string>
     <string name="notes">Qeydlər</string>
     <string name="deleting_folder">\'%s\' qovluğu silinir</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Sevimlilər</string>
