--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Detalls</string>
     <string name="notes">Notes</string>
     <string name="deleting_folder">S\'està eliminant la carpeta \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferits</string>
