--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Detaljer</string>
     <string name="notes">Noter</string>
     <string name="deleting_folder">Sletter mappen \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Bogmærker</string>
