--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Yksityiskohdat</string>
     <string name="notes">Muistiinpanot</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorites</string>
