--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Dettagli</string>
     <string name="notes">Note</string>
     <string name="deleting_folder">Eliminazione cartella \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferiti</string>
