--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Detalės</string>
     <string name="notes">Užrašai</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Mėgiamiausieji</string>
