--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Details</string>
     <string name="notes">Notities</string>
     <string name="deleting_folder">Map \'%s\' verwijderen</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorieten</string>
