--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Detalhes</string>
     <string name="notes">Notas</string>
     <string name="deleting_folder">A apagar a pasta \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
