--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Detaily</string>
     <string name="notes">Poznámky</string>
     <string name="deleting_folder">Odstraňuje sa priečinok \'%s\'</string>
+    <string name="none">Žiadny</string>
 
     <!-- Favorites -->
     <string name="favorites">Obľúbené</string>
