--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -16,6 +16,7 @@
     <string name="details">Information</string>
     <string name="notes">Anteckningar</string>
     <string name="deleting_folder">Tar bort mappen \'%s\'</string>
+    <string name="none">None</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriter</string>
