--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -16,7 +16,7 @@
     <string name="details">Detalles</string>
     <string name="notes">Notas</string>
     <string name="deleting_folder">Eliminando carpeta \'%s\'</string>
-    <string name="none">None</string>
+    <string name="none">Ninguno</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
