--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -555,4 +555,5 @@
     <string name="exoplayer_title">ExoPlayer (video player)</string>
     <string name="panorama_view_title">VR Panorama View (visualizzazione panorami)</string>
     <string name="sanselan_title">Apache Sanselan (lettura metadati immagini)</string>
+    <string name="filters_title">Android Photo Filters (image filters)</string>
 </resources>
