--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -570,4 +570,5 @@
     <string name="exoplayer_title">ExoPlayer (odtwarzacz filmów)</string>
     <string name="panorama_view_title">VR Panorama View (wyświetlanie panoram)</string>
     <string name="sanselan_title">Apache Sanselan (odczytywanie metadanych obrazów)</string>
+    <string name="filters_title">Android Photo Filters (image filters)</string>
 </resources>
