--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -585,4 +585,5 @@
     <string name="exoplayer_title">ExoPlayer (видеопроигрыватель)</string>
     <string name="panorama_view_title">VR Panorama View (отображение панорам)</string>
     <string name="sanselan_title">Apache Sanselan (чтение метаданных изображений)</string>
+    <string name="filters_title">Android Photo Filters (image filters)</string>
 </resources>
