--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -576,4 +576,5 @@
     <string name="exoplayer_title">ExoPlayer (prehrávač videí)</string>
     <string name="panorama_view_title">VR Panorama View (zobrazovanie panorám)</string>
     <string name="sanselan_title">Apache Sanselan (čítanie metadát obrázkov)</string>
+    <string name="filters_title">Android Photo Filters (filtre obrázkov)</string>
 </resources>
