--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -554,4 +554,5 @@
     <string name="exoplayer_title">ExoPlayer (video oynatıcı)</string>
     <string name="panorama_view_title">VR Panorama View (panorama görüntüleme)</string>
     <string name="sanselan_title">Apache Sanselan (görüntü meta verileri okuma)</string>
+    <string name="filters_title">Android Photo Filters (image filters)</string>
 </resources>
