--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -501,6 +501,8 @@
     </string>
     <string name="purchase">Satın al</string>
     <string name="update_thank_you">Lütfen Simple Thank You\'yu son sürüme güncelleyin</string>
+    <string name="before_asking_question_read_faq">Before you ask a question, please read the Frequently Asked Questions first, maybe the solution is there.</string>
+    <string name="read_it">Read it</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
