--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -501,8 +501,8 @@
     </string>
     <string name="purchase">Køb</string>
     <string name="update_thank_you">Opdater venligst Simple Thank You til den seneste version</string>
-    <string name="before_asking_question_read_faq">Before you ask a question, please read the Frequently Asked Questions first, maybe the solution is there.</string>
-    <string name="read_it">Read it</string>
+    <string name="before_asking_question_read_faq">Inden du stiller et spørgsmål, bør du lige tjekke Ofte stillede spørgsmål, som måske allerede indeholder svaret.</string>
+    <string name="read_it">Læs det</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
