removing the More Donating Options button from the Purchase Thank You dialog

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -358,7 +358,7 @@
 
     <!-- Settings -->
     <string name="settings">Parametrlər</string>
-    <string name="purchase_simple_thank_you">Sadə Təşəkkür'ü Alın</string>
+    <string name="purchase_simple_thank_you">Sadə Təşəkkür\'ü Alın</string>
     <string name="customize_colors">Rəngləri dəyiş</string>
     <string name="customize_widget_colors">Widget rənglərini dəyiş</string>
     <string name="use_english_language">İngilis dilində işlət</string>
@@ -495,7 +495,6 @@
         <![CDATA[
             Salam,<br><br>
             arzu edirəm tətbiqdən zövq alırsan. Reklam ehtiva etmir, please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.<br><br>
-            You can find more donating options <a href="https://simplemobiletools.com/donate">here</a>.<br><br>
             Thank you!
         ]]>
     </string>
