--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -121,8 +121,8 @@
     </plurals>
 
     <plurals name="deleting_items">
-        <item quantity="one">Deleting %d item</item>
-        <item quantity="other">Deleting %d items</item>
+        <item quantity="one">A apagar %d item</item>
+        <item quantity="other">A apagar %d itens</item>
     </plurals>
 
     <!-- Storages -->
@@ -132,8 +132,8 @@
     <string name="root">Raiz</string>
     <string name="wrong_root_selected">Pasta inválida, por favor selecione o cartão SD</string>
     <string name="sd_card_otg_same">Não pode utilizar o mesmo caminho para o cartão SD e para o dispositivo OTG</string>
-    <string name="app_on_sd_card">You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won\'t even see them on the list of available widgets.
-        It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage.</string>
+    <string name="app_on_sd_card">Parece que a aplicação está instalada no cartão SD, o que torna o widget indisponível. Nem sequer aparecerá na lista de widgets disponíveis.
+        Esta é uma limitação do sistema e, se quiser usar widgets, tem que mover a aplicação para o armazenamento interno.</string>
 
     <!-- File properties -->
     <string name="properties">Propriedades</string>
@@ -203,9 +203,9 @@
     <string name="temporarily_show_hidden">Mostrar ocultas temporariamente</string>
     <string name="stop_showing_hidden">Não mostrar multimédia oculta</string>
     <string name="maximum_share_reached">Não pode partilhar tantos itens em simultâneoo</string>
-    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
-    <string name="undo">Undo</string>
-    <string name="redo">Redo</string>
+    <string name="empty_and_disable_recycle_bin">Esvaziar e desativar a reciclagem</string>
+    <string name="undo">Desfazer</string>
+    <string name="redo">Refazer</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
@@ -224,15 +224,15 @@
     <string name="proceed_with_deletion">Tem a certeza de que deseja continuar com a eliminação?</string>
     <string name="deletion_confirmation">Tem a certeza de que deseja apagar %s?</string>    <!-- Are you sure you want to delete 5 items? -->
     <string name="move_to_recycle_bin_confirmation">Tem a certeza de que deseja mover %s para a reciclagem?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
-    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
-    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
+    <string name="are_you_sure_delete">Tem a certeza de que deseja apagar este item?</string>
+    <string name="are_you_sure_recycle_bin">Tem a certeza de que deseja mover este item para a reciclagem?</string>
     <string name="do_not_ask_again">Não perguntar mais para esta sessão</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">WARNING: You are deleting a folder</item>
-        <item quantity="other">WARNING: You are deleting %d folders</item>
+        <item quantity="one">AVISO: está prestes a apagar uma pasta</item>
+        <item quantity="other">AVISO: está prestes a apagar %d pastas</item>
     </plurals>
 
     <!-- Password protection -->
@@ -256,8 +256,8 @@
     <string name="fingerprint_setup_successfully">Proteção definida com sucesso. Deve reinstalar a aplicação se ocorrerem problemas.</string>
 
     <!-- Times -->
-    <string name="yesterday">Yesterday</string>
-    <string name="today">Today</string>
+    <string name="yesterday">Ontem</string>
+    <string name="today">Hoje</string>
     <string name="tomorrow">Amanhã</string>
     <string name="seconds_raw">segundos</string>
     <string name="minutes_raw">minutos</string>
@@ -385,7 +385,7 @@
     <string name="move_items_into_recycle_bin">Mover itens para a reciclagem em vez de os apagar</string>
     <string name="recycle_bin_cleaning_interval">Intervalo de tempo para limpar a reciclagem</string>
     <string name="empty_recycle_bin">Limpar reciclagem</string>
-    <string name="force_portrait_mode">Impor modo verticar</string>
+    <string name="force_portrait_mode">Impor modo vertical</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilidade</string>
@@ -398,13 +398,13 @@
     <string name="text">Texto</string>
 
     <!-- Recycle Bin -->
-    <string name="restore_this_file">Restore this file</string>
-    <string name="restore_selected_files">Restore selected files</string>
-    <string name="restore_all_files">Restore all files</string>
-    <string name="recycle_bin_emptied">The Recycle Bin has been emptied successfully</string>
-    <string name="files_restored_successfully">Files have been restored successfully</string>
-    <string name="empty_recycle_bin_confirmation">Are you sure you want to empty the Recycle Bin? The files will be permanently lost.</string>
-    <string name="recycle_bin_empty">The Recycle Bin is empty</string>
+    <string name="restore_this_file">Restaurar este ficheiro</string>
+    <string name="restore_selected_files">Restarurar os ficheiros selecionados</string>
+    <string name="restore_all_files">Restaurar todos os ficheiros</string>
+    <string name="recycle_bin_emptied">A reciclagem foi esvaziada</string>
+    <string name="files_restored_successfully">Os ficheiros foram restaurados</string>
+    <string name="empty_recycle_bin_confirmation">Tem a certeza de que deseja esvaziar a reciclagem? Todos os itens serão apagados permanentemente.</string>
+    <string name="recycle_bin_empty">A reciclagem está vazia</string>
 
     <!-- Import / Export -->
     <string name="importing">A importar…</string>
@@ -500,8 +500,8 @@
     </string>
     <string name="purchase">Comprar</string>
     <string name="update_thank_you">por favor atualize a aplicação Simple Thank You para a versão mais recente</string>
-    <string name="before_asking_question_read_faq">Before you ask a question, please read the Frequently Asked Questions first, maybe the solution is there.</string>
-    <string name="read_it">Read it</string>
+    <string name="before_asking_question_read_faq">Antes de colocar uma questão, leia as FAQ pois pode já existir uma solução para o seu problema.</string>
+    <string name="read_it">Ler</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
@@ -553,8 +553,8 @@
     <string name="gson_title">Gson (processador JSON)</string>
     <string name="leak_canary_title">Leak Canary (detetor de falhas de memória)</string>
     <string name="number_picker_title">Number Picker (seletor de números personalizado)</string>
-    <string name="exoplayer_title">ExoPlayer (video player)</string>
-    <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
-    <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
-    <string name="filters_title">Android Photo Filters (image filters)</string>
+    <string name="exoplayer_title">ExoPlayer (reprodutor de vídeo)</string>
+    <string name="panorama_view_title">VR Panorama View (exibição panorâmica)</string>
+    <string name="sanselan_title">Apache Sanselan (leitor de meta-dados das imagens)</string>
+    <string name="filters_title">Android Photo Filters (filtros de imagens)</string>
 </resources>
