--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -477,7 +477,7 @@
     <!-- About -->
     <string name="about">Haqqında</string>
     <string name="website_label">Kök koda keçiş üçün</string>
-    <string name="email_label">Geri dönüş və tövsiyələriniz göndərin</string>
+    <string name="email_label">Geri dönüş və tövsiyələrinizi göndərin</string>
     <string name="more_apps_underlined"><u>Daha çox tətbiq</u></string>
     <string name="third_party_licences_underlined"><u>Üçüncü partiya lisenziyaları</u></string>
     <string name="invite_friends_underlined"><u>Dostları dəvət et</u></string>
@@ -500,7 +500,7 @@
     </string>
     <string name="purchase">Ödəniş Et</string>
     <string name="update_thank_you">Xahiş olunur Sadə Təşəkkür tətbiqini ən son versiyaya yeniləyin</string>
-    <string name="before_asking_question_read_faq">Before you ask a question, please read the Frequently Asked Questions first, maybe the solution is there.</string>
+    <string name="before_asking_question_read_faq">Sual verməmişdən qabaq, Tez-tez soruşulan sualları oxuyun, ola bilər cavab oradadır.</string>
     <string name="read_it">Read it</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
